--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -137,9 +137,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_input_password"
-            android:text="Register"
             android:backgroundTint="@color/black"
-            android:textColor="@android:color/white"
-            android:padding="12dp"/>
+            android:fontFamily="@font/alfa_slab_one"
+            android:padding="12dp"
+            android:text="REGISTER"
+            android:textColor="@android:color/white" />
     </RelativeLayout>
 </ScrollView>
