--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -123,7 +123,7 @@
                             android:layout_marginBottom="8dp"
                             android:fontFamily="serif"
                             android:gravity="center"
-                            android:text="No of employees"
+                            android:text="0"
                             android:textSize="20sp"
                             android:textStyle="bold" />
 
@@ -169,7 +169,7 @@
                             android:layout_marginBottom="8dp"
                             android:fontFamily="serif"
                             android:gravity="center"
-                            android:text="Tasks Assigned"
+                            android:text="0"
                             android:textSize="20sp"
                             android:textStyle="bold" />
 
@@ -214,7 +214,7 @@
                             android:layout_marginBottom="8dp"
                             android:fontFamily="serif"
                             android:gravity="center"
-                            android:text="No of Admins"
+                            android:text="0"
                             android:textColor="@color/white"
                             android:textSize="20sp"
                             android:textStyle="bold" />
@@ -260,7 +260,7 @@
                             android:layout_marginBottom="8dp"
                             android:fontFamily="serif"
                             android:gravity="center"
-                            android:text="Completed Tasks"
+                            android:text="0"
                             android:textColor="@color/white"
                             android:textSize="20sp"
                             android:textStyle="bold" />
