--- a/app/src/main/res/layout/activity_adminmanage_employees.xml
+++ b/app/src/main/res/layout/activity_adminmanage_employees.xml
@@ -45,18 +45,27 @@
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="150dp"
         android:orientation="vertical"
         android:padding="16dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/alfa_slab_one"
+            android:text="Employee Information"
+            android:textSize="20sp" />
 
         <Spinner
             android:id="@+id/users_spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:fontFamily="@font/alfa_slab_one"
             android:background="@drawable/inputsquare"
             android:layout_marginBottom="8dp"/>
 
@@ -64,37 +73,41 @@
             android:id="@+id/email_edittext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginBottom="8dp"
+            android:fontFamily="@font/alfa_slab_one"
+            android:hint="Email"
+            android:inputType="textEmailAddress" />
 
         <EditText
             android:id="@+id/firstname_edittext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="First Name"
-            android:inputType="textPersonName"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginBottom="8dp"
+            android:fontFamily="@font/alfa_slab_one"
+            android:hint="First Name"
+            android:inputType="textPersonName" />
 
         <EditText
             android:id="@+id/lastname_edittext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Last Name"
-            android:inputType="textPersonName"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginBottom="8dp"
+            android:fontFamily="@font/alfa_slab_one"
+            android:hint="Last Name"
+            android:inputType="textPersonName" />
 
         <EditText
             android:id="@+id/role_edittext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Role"
-            android:inputType="text"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginBottom="8dp"
+            android:fontFamily="@font/alfa_slab_one"
+            android:hint="Role"
+            android:inputType="text" />
 
 
         <LinearLayout
@@ -106,10 +119,12 @@
                 android:id="@+id/button_update"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginLeft="70dp"
-                android:text="Update"
-                android:backgroundTint="@color/dark"/>
+                android:backgroundTint="@color/grey"
+                android:fontFamily="@font/alfa_slab_one"
+                android:text="UPDATE"
+                android:textColor="#050505" />
 
             <Button
                 android:id="@+id/button_delete"
@@ -117,8 +132,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="50dp"
                 android:layout_marginTop="8dp"
-                android:text="Delete"
-                android:backgroundTint="@color/dark"/>
+                android:backgroundTint="@color/dark"
+                android:fontFamily="@font/alfa_slab_one"
+                android:text="DELETE" />
 
         </LinearLayout>
     </LinearLayout>
@@ -129,7 +145,7 @@
         android:layout_height="150dp"
         android:layout_gravity="bottom"
         android:layout_marginTop="680dp"
-        android:layout_marginBottom="10dp"
+
         android:background="@color/grey"
         android:orientation="horizontal"
         android:padding="8dp">
