--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -271,8 +271,9 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
                         android:layout_marginLeft="145dp"
+                        android:layout_marginTop="15dp"
+                        android:fontFamily="@font/alfa_slab_one"
                         android:text="Tasks"
                         android:textSize="24sp" />
 
@@ -289,9 +290,10 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="160dp"
-                        android:text="Started"
                         android:layout_marginLeft="40dp"
+                        android:layout_marginTop="160dp"
+                        android:fontFamily="@font/alfa_slab_one"
+                        android:text="Started"
                         android:textSize="24sp" />
 
                     <TextView
@@ -307,8 +309,9 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="160dp"
                         android:layout_marginLeft="210dp"
+                        android:layout_marginTop="160dp"
+                        android:fontFamily="@font/alfa_slab_one"
                         android:text="Completed"
                         android:textSize="24sp" />
 
