--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -62,9 +62,10 @@
                 android:id="@+id/edit_first_name"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
+                android:fontFamily="sans-serif"
                 android:hint="First Name"
                 android:padding="8dp"
-                tools:ignore="UnusedAttribute"/>
+                tools:ignore="UnusedAttribute" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -155,9 +156,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_input_password"
-            android:text="Register"
             android:backgroundTint="@color/black"
-            android:textColor="@android:color/white"
-            android:padding="12dp"/>
+            android:fontFamily="@font/alfa_slab_one"
+            android:padding="12dp"
+            android:text="REGISTER"
+            android:textColor="@android:color/white" />
     </RelativeLayout>
 </ScrollView>
