--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -42,7 +42,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="70dp"
             android:fontFamily="@font/alfa_slab_one"
-            android:text="John."
+            android:text="Name."
             android:textSize="20sp" />
 
         <LinearLayout
@@ -284,7 +284,7 @@
                 android:layout_marginLeft="10dp"
                 android:backgroundTint="@color/dark"
                 android:fontFamily="@font/alfa_slab_one"
-                android:text="Register User"
+                android:text="REGISTER"
                 android:textColor="@color/grey"
                 android:textSize="15dp" />
 
@@ -296,7 +296,7 @@
                     android:layout_marginLeft="40dp"
                     android:backgroundTint="@color/dark"
                     android:fontFamily="@font/alfa_slab_one"
-                    android:text="Manage User"
+                    android:text="MANAGE"
                     android:textColor="@color/grey"
                     android:textSize="15dp" />
 
