--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="70dp"
             android:fontFamily="@font/alfa_slab_one"
-            android:text="John."
+            android:text="Name."
             android:textSize="20sp" />
 
         <LinearLayout
